Updated TODO's; Turned off LCD text smoothing by default